--- a/apps/base/gaming/romm/externalsecrets.yaml
+++ b/apps/base/gaming/romm/externalsecrets.yaml
@@ -12,20 +12,19 @@ spec:
     # this is how the Kind=Secret will look like
     template:
       data:
-        JWT_SECRET: "{{ .jwt }}"
-        JS_USER: "{{ .username }}"
-        JS_PASSWORD: "{{ .password }}"
+        OIDC_ENABLED: true
+        OIDC_PROVIDER: authentik
+        OIDC_CLIENT_ID: "{{ .client_id }}"
+        OIDC_CLIENT_SECRET: "{{ .client_secret }}"
+        OIDC_REDIRECT_URI: "https://emu.j6n.dev/api/oauth/openid"
+        OIDC_SERVER_APPLICATION_URL: "https://auth.j6n.dev/application/o/romm"
 
   data:
-  - secretKey: username
+  - secretKey: client_id
     remoteRef:
-      key: romm-secret
-      property: username
-  - secretKey: password
+      key: romm-oidc
+      property: client_id
+  - secretKey: client_secret
     remoteRef:
-      key: romm-secret
-      property: password
-  - secretKey: jwt
-    remoteRef:
-      key: romm-secret
-      property: jwt
+      key: romm-oidc
+      property: client_secret
