--- a/apps/base/gaming/kustomize.yaml
+++ b/apps/base/gaming/kustomize.yaml
@@ -1,32 +1,32 @@
 ---
-# apiVersion: kustomize.toolkit.fluxcd.io/v1
-# kind: Kustomization
-# metadata:
-#   name: &app romm
-#   namespace: flux-system
-# spec:
-#   components:
-#     - ../../../components/dragonfly
-#     - ../../../components/postgres
-#     # - ../../../components/volsync
-#   postBuild:
-#     substitute:
-#       APP: *app
-#       DRAGONFLY_REPLICAS: 1
-#       DRAGONFLY_MAX_MEMORY: 500Mi
-#       POSTGRES_REPLICAS: 1
-#       POSTGRES_SIZE: 1Gi
-#       VOLSYNC_CAPACITY: 5Gi
-#   targetNamespace: gaming
-#   commonMetadata:
-#     labels:
-#       service: *app
-#   interval: 5m
-#   path: ./apps/base/gaming/romm
-#   prune: true
-#   sourceRef:
-#     kind: GitRepository
-#     name: flux-system
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: &app romm
+  namespace: flux-system
+spec:
+  components:
+    - ../../../components/dragonfly
+    - ../../../components/postgres
+    # - ../../../components/volsync
+  postBuild:
+    substitute:
+      APP: *app
+      DRAGONFLY_REPLICAS: 1
+      DRAGONFLY_MAX_MEMORY: 500Mi
+      POSTGRES_REPLICAS: 1
+      POSTGRES_SIZE: 1Gi
+      VOLSYNC_CAPACITY: 5Gi
+  targetNamespace: gaming
+  commonMetadata:
+    labels:
+      service: *app
+  interval: 5m
+  path: ./apps/base/gaming/romm
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
