--- a/apps/base/gatus/release/helmrelease.yaml
+++ b/apps/base/gatus/release/helmrelease.yaml
@@ -49,7 +49,32 @@ spec:
         logo: https://avatars.githubusercontent.com/u/72368152
         link: https://grafana.j6n.dev
       metrics: true
+      connectivity:
+        checker:
+          target: 1.1.1.1:53
+          interval: 300s
       endpoints:
+        - name: Cloudflare
+          group: connectivity
+          url: icmp://1.1.1.1
+          interval: 1m
+          conditions:
+            - "[CONNECTED] == true"
+
+        - name: Google
+          group: connectivity
+          url: icmp://8.8.8.8
+          interval: 1m
+          conditions:
+            - "[CONNECTED] == true"
+
+        - name: Quad9
+          group: connectivity
+          url: icmp://9.9.9.9
+          interval: 1m
+          conditions:
+            - "[CONNECTED] == true"
+
         - name: Personal
           group: Projects
           url: https://j6n.ca
