--- a/apps/base/gaming/romm/externalsecrets.yaml
+++ b/apps/base/gaming/romm/externalsecrets.yaml
@@ -12,7 +12,7 @@ spec:
     # this is how the Kind=Secret will look like
     template:
       data:
-        OIDC_ENABLED: true
+        OIDC_ENABLED: "true"
         OIDC_PROVIDER: authentik
         OIDC_CLIENT_ID: "{{ .client_id }}"
         OIDC_CLIENT_SECRET: "{{ .client_secret }}"
