--- a/apps/base/gaming/romm/externalsecrets.yaml
+++ b/apps/base/gaming/romm/externalsecrets.yaml
@@ -12,6 +12,8 @@ spec:
     # this is how the Kind=Secret will look like
     template:
       data:
+        DISABLE_USERPASS_LOGIN: "true"
+        ROMM_AUTH_SECRET_KEY: "{{ .secret_key }}"
         OIDC_ENABLED: "true"
         OIDC_PROVIDER: authentik
         OIDC_CLIENT_ID: "{{ .client_id }}"
@@ -28,3 +30,7 @@ spec:
     remoteRef:
       key: romm-oidc
       property: client_secret
+  - secretKey: secret_key
+    remoteRef:
+      key: romm-secret
+      property: secret_key
