--- a/apps/base/gaming/romm/helmrelease.yaml
+++ b/apps/base/gaming/romm/helmrelease.yaml
@@ -31,7 +31,24 @@ spec:
                     name: "{{ .Release.Name }}-postgres"
                     key: password
               DB_NAME: "{{ .Release.Name }}"
-              LOG_LEVEL: "info"
+              DISABLE_DOWNLOAD_ENDPOINT_AUTH: true
+              DISABLE_USERPASS_LOGIN: false
+              ENABLE_RESCAN_ON_FILESYSTEM_CHANGE: "true"
+              ENABLE_SCHEDULED_CONVERT_IMAGES_TO_WEBP: "true"
+              ENABLE_SCHEDULED_RESCAN: "true"
+              ENABLE_SCHEDULED_RETROACHIEVEMENTS_PROGRESS_SYNC: "true"
+              ENABLE_SCHEDULED_UPDATE_LAUNCHBOX_METADATA: "true" #chron set to 5m by default
+              ENABLE_SCHEDULED_UPDATE_MAME_XML: "false"
+              ENABLE_SCHEDULED_UPDATE_SWITCH_TITLEDB: "false"
+              HASHEOUS_API_ENABLED: true
+              PLAYMATCH_API_ENABLED: true
+              REDIS_HOST: "{{ .Release.Name }}-dragonfly"
+              REDIS_PORT: "6379"
+              RESCAN_ON_FILESYSTEM_CHANGE_DELAY: 5
+              ROMM_BASE_PATH: /romm
+              ROMM_DB_DRIVER: postgresql
+              SCHEDULED_RESCAN_CRON: "0 3 * * *"
+              LAUNCHBOX_API_ENABLED: "true"
               TZ: America/Toronto
             envFrom:
               - secretRef:
