--- a/apps/base/hypermind/release/helmrelease.yaml
+++ b/apps/base/hypermind/release/helmrelease.yaml
@@ -22,6 +22,8 @@ spec:
               ENABLE_CHAT: "true"
               ENABLE_MAP: "true"
               LOG_LEVEL: "info"
+              MAX_CONNECTIONS: 100
+              MAX_RELAY_HOPS: 30
               TZ: America/Toronto
             ports:
               - containerPort: &port 3000
