--- a/apps/base/gaming/minecraft/kustomization.yaml
+++ b/apps/base/gaming/minecraft/kustomization.yaml
@@ -1,5 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./helmrelease.yaml  
+  - ./helmrelease.yaml
   - ./externalsecrets.yaml
+  - ./cobblemon/helmrelease.yaml
+  - ./cobblemon/externalsecrets.yaml
