add cobb academy modpack

--- a/apps/base/gaming/minecraft/kustomization.yaml
+++ b/apps/base/gaming/minecraft/kustomization.yaml
@@ -5,3 +5,5 @@ resources:
   - ./externalsecrets.yaml
   - ./cobblemon/helmrelease.yaml
   - ./cobblemon/externalsecrets.yaml
+  - ./cobblemon_academy/helmrelease.yaml
+  - ./cobblemon_academy/externalsecrets.yaml
