--- a/apps/base/gaming/minecraft/cobblemon_academy/externalsecrets.yaml
+++ b/apps/base/gaming/minecraft/cobblemon_academy/externalsecrets.yaml
@@ -13,9 +13,15 @@ spec:
     template:
       data:
         rcon_password: "{{ .rcon_password }}"
+        CF_API_KEY: "{{ .apikey }}"
+
 
   data:
     - secretKey: rcon_password
       remoteRef:
         key: minecraft-secret
         property: rcon_password
+    - secretKey: apikey
+      remoteRef:
+        key: curseforge-apikey
+        property: password
