--- a/apps/base/gaming/minecraft/kustomization.yaml
+++ b/apps/base/gaming/minecraft/kustomization.yaml
@@ -1,8 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./helmrelease.yaml
-  - ./externalsecrets.yaml
+  # - ./helmrelease.yaml
+  # - ./externalsecrets.yaml
   - ./cobblemon/helmrelease.yaml
   - ./cobblemon/externalsecrets.yaml
   - ./cobblemon_academy/helmrelease.yaml
