--- a/apps/base/gaming/minecraft/cobblemon_academy/helmrelease.yaml
+++ b/apps/base/gaming/minecraft/cobblemon_academy/helmrelease.yaml
@@ -15,7 +15,7 @@ spec:
     fullnameOverride: *app
     image:
       repository: ghcr.io/itzg/minecraft-server
-      tag: 2025.12.0@sha256:4eb78cc5f3f4e87e281d38590deca2a4a74afaa9f351210059cb2786443994f2
+      tag: 2026.1.3
       pullPolicy: IfNotPresent
     resources:
       requests:
