--- a/apps/base/gaming/minecraft/cobblemon_academy/helmrelease.yaml
+++ b/apps/base/gaming/minecraft/cobblemon_academy/helmrelease.yaml
@@ -15,7 +15,7 @@ spec:
     fullnameOverride: *app
     image:
       repository: ghcr.io/itzg/minecraft-server
-      tag: 2026.1.3
+      tag: java21
       pullPolicy: IfNotPresent
     resources:
       requests:
