--- a/clusters/homelab/apps/observability/kustomization.yaml
+++ b/clusters/homelab/apps/observability/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   - ../../../../apps/base/prometheus-json-exporter/kustomize.yaml
   - ../../../../apps/base/prometheus-snmp-exporter/kustomize.yaml
   - ../../../../apps/base/karma/kustomize.yaml
+  - ../../../../apps/base/karpor/kustomize.yaml
   - ./namespace.yaml
 commonLabels:
   cluster: homelab
