--- a/apps/base/kube-cats/kustomize.yaml
+++ b/apps/base/kube-cats/kustomize.yaml
@@ -14,3 +14,15 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+  patches:
+    - patch: |
+        apiVersion: builtin
+        kind: LabelTransformer
+        metadata:
+          name: common-labels
+        labels:
+          service: kube-cats
+          owner: j6n
+          level: '3'
+      target:
+        kind: .*
