add deployments label test

--- a/apps/base/victoria-metrics-k8s-stack/release/helmrelease.yaml
+++ b/apps/base/victoria-metrics-k8s-stack/release/helmrelease.yaml
@@ -22,6 +22,7 @@ spec:
       enabled: true
       metricLabelsAllowlist:
         - pods=["level", "service", "cluster", "owner"]
+        - deployments=["level", "service", "cluster", "owner"]
     # Disable VMSingle and create VMCluster
     vmsingle:
       enabled: false
