--- a/apps/base/victoria-metrics-k8s-stack/release/helmrelease.yaml
+++ b/apps/base/victoria-metrics-k8s-stack/release/helmrelease.yaml
@@ -21,8 +21,8 @@ spec:
     kube-state-metrics:
       enabled: true
       metricLabelsAllowlist:
-        - pods=["level", "service", "cluster", "owner"]
-        - deployments=["level", "service", "cluster", "owner"]
+        - pods=[level,service,cluster,owner]
+        - deployments=[level,service,cluster,owner]
     # Disable VMSingle and create VMCluster
     vmsingle:
       enabled: false
