--- a/apps/base/media/storage/externalsecrets.yaml
+++ b/apps/base/media/storage/externalsecrets.yaml
@@ -102,3 +102,29 @@ spec:
       key: radarr-postgres
       property: password
 ---
+apiVersion: external-secrets.io/v1
+kind: ExternalSecret
+metadata:
+  name: prowlarr-postgres
+spec:
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: onepassword
+  target:
+    creationPolicy: Owner
+    # this is how the Kind=Secret will look like
+    template:
+      data:
+        username: "{{ .username }}"
+        password: "{{ .password }}"
+
+  data:
+  - secretKey: username
+    remoteRef:
+      key: prowlarr-postgres
+      property: username
+  - secretKey: password
+    remoteRef:
+      key: prowlarr-postgres
+      property: password
+---
