--- a/apps/base/media/kustomize.yaml
+++ b/apps/base/media/kustomize.yaml
@@ -101,7 +101,6 @@ spec:
       service: *app
   dependsOn:
     - name: media-storage
-    - name: gluetun
   interval: 5m
   path: ./apps/base/media/sonarr
   prune: true
@@ -121,9 +120,27 @@ spec:
       service: *app
   dependsOn:
     - name: media-storage
-    - name: gluetun
   interval: 5m
   path: ./apps/base/media/radarr
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: &app prowlarr
+  namespace: flux-system
+spec:
+  targetNamespace: media
+  commonMetadata:
+    labels:
+      service: *app
+  dependsOn:
+    - name: media-storage
+  interval: 5m
+  path: ./apps/base/media/prowlarr
   prune: true
   sourceRef:
     kind: GitRepository
