--- a/apps/base/csi-driver-nfs/kustomize.yaml
+++ b/apps/base/csi-driver-nfs/kustomize.yaml
@@ -14,3 +14,22 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: &app csi-driver-nfs-storageclasses
+  namespace: flux-system
+spec:
+  targetNamespace: kube-system
+  commonMetadata:
+    labels:
+      service: *app
+  dependsOn:
+    - name: csi-driver-nfs
+  interval: 5m
+  path: ./apps/base/csi-driver-nfs/storageclasses
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
