--- a/apps/base/media/jellyfin/helmrelease.yaml
+++ b/apps/base/media/jellyfin/helmrelease.yaml
@@ -29,7 +29,7 @@ spec:
       - name: data
         nfs:
           server: mimir.home
-          path: /MEDIA
+          path: /var/nfs/shared/MEDIA
 
     volumeMounts:
       - mountPath: /data
