--- a/apps/base/csi-driver-nfs/storageclasses/unas.yaml
+++ b/apps/base/csi-driver-nfs/storageclasses/unas.yaml
@@ -2,11 +2,11 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: nfs-unas
+  name: nfs-unas-media
 provisioner: nfs.csi.k8s.io
 parameters:
   server: mimir.home
-  share: /MEDIA
+  share: /var/nfs/shared/MEDIA
 reclaimPolicy: Delete
 volumeBindingMode: Immediate
 mountOptions:
