--- a/apps/base/llm/ollama/helmrelease.yaml
+++ b/apps/base/llm/ollama/helmrelease.yaml
@@ -6,6 +6,7 @@ spec:
   chartRef:
     kind: OCIRepository
     name: app-template
+    namespace: flux-system
   dependsOn: []
   interval: 15m
   values:
