--- a/clusters/homelab/apps/projects/kube-cats/kustomization.yaml
+++ b/clusters/homelab/apps/projects/kube-cats/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ../../../../apps/base/projects/kube-cats/kustomize.yaml
+  - ../../../../../apps/base/projects/kube-cats/kustomize.yaml
   - ./namespace.yaml
 commonLabels:
   cluster: homelab
