setup open-webui

--- a/apps/base/llm/ollama/kustomize.yaml
+++ b/apps/base/llm/ollama/kustomize.yaml
@@ -4,7 +4,7 @@ metadata:
   name: &app ollama
   namespace: flux-system
 spec:
-  targetNamespace: ollama
+  targetNamespace: *app
   commonMetadata:
     labels:
       service: *app
