--- a/clusters/homelab/apps/llm/open-webui/kustomization.yaml
+++ b/clusters/homelab/apps/llm/open-webui/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ../../../../apps/base/llm/ollama/kustomize.yaml
+  - ../../../../../apps/base/llm/open-webui/kustomize.yaml
   - ./namespace.yaml
 commonLabels:
   cluster: homelab
