--- a/apps/base/llm/open-webui/release/externalsecrets.yaml
+++ b/apps/base/llm/open-webui/release/externalsecrets.yaml
@@ -13,7 +13,7 @@ spec:
       data:
         DATABASE_USER: "{{ .username }}"
         DATABASE_PASSWORD: "{{ .password }}"
-        DATABASE_PORT: 5432
+        DATABASE_PORT: "5432"
         DATABASE_NAME: open-webui
         DATABASE_TYPE: postgresql
         DATABASE_HOST: open-webui-postgres-rw
