--- a/apps/base/llm/open-webui/release/externalsecrets.yaml
+++ b/apps/base/llm/open-webui/release/externalsecrets.yaml
@@ -22,11 +22,11 @@ spec:
   data:
   - secretKey: username
     remoteRef:
-      key: prowlarr-postgres
+      key: open-webui-postgres
       property: username
   - secretKey: password
     remoteRef:
-      key: prowlarr-postgres
+      key: open-webui-postgres
       property: password
 ---
 apiVersion: external-secrets.io/v1
