fix the db stuff

--- a/apps/base/llm/open-webui/release/externalsecrets.yaml
+++ b/apps/base/llm/open-webui/release/externalsecrets.yaml
@@ -11,6 +11,7 @@ spec:
     # this is how the Kind=Secret will look like
     template:
       data:
+        # OAUTH CONFIG
         ENABLE_OAUTH_SIGNUP: "true"
         ENABLE_OAUTH_PERSISTENT_CONFIG: "false"
         OAUTH_MERGE_ACCOUNTS_BY_EMAIL: "true"
