--- a/apps/base/llm/open-webui/data/externalsecrets.yaml
+++ b/apps/base/llm/open-webui/data/externalsecrets.yaml
@@ -11,22 +11,11 @@ spec:
     # this is how the Kind=Secret will look like
     template:
       data:
-        DATABASE_USER: "{{ .username }}"
-        DATABASE_PASSWORD: "{{ .password }}"
-        DATABASE_PORT: "5432"
-        DATABASE_NAME: open-webui
-        DATABASE_TYPE: postgresql
-        DATABASE_HOST: open-webui-postgres-rw
+        username: "{{ .username }}"
+        password: "{{ .password }}"
 
-
-  data:
-  - secretKey: username
-    remoteRef:
-      key: open-webui-postgres
-      property: username
-  - secretKey: password
-    remoteRef:
-      key: open-webui-postgres
-      property: password
+  dataFrom:
+    - extract:
+        key: open-webui-postgres
 ---
 
