--- a/apps/base/llm/open-webui/release/externalsecrets.yaml
+++ b/apps/base/llm/open-webui/release/externalsecrets.yaml
@@ -12,8 +12,12 @@ spec:
     template:
       data:
         # OAUTH CONFIG
+        ENABLE_SIGNUP: "false"
+        ENABLE_LOGIN_FORM: "false"
         ENABLE_OAUTH_SIGNUP: "true"
         ENABLE_OAUTH_PERSISTENT_CONFIG: "false"
+        OAUTH_ROLES_CLAIM: groups
+        OAUTH_ADMIN_ROLES: open-webui_admin
         OAUTH_MERGE_ACCOUNTS_BY_EMAIL: "true"
         OAUTH_PROVIDER_NAME: Authentik
         OPENID_PROVIDER_URL: https://auth.j6n.dev/application/o/open-webui/.well-known/openid-configuration
